[profile.release]
lto = true
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"   # Abort on panic, as unwinding code does require extra binary size
rpath = true

[workspace]
members = ["lib/core", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
bitcoin = { version = "0.32.5", features = ["serde", "rand"] }
lightning-invoice = "0.33.1"
tokio = { version = "1.41.0", features = ["full", "macros", "rt-multi-thread"] }
log = { version = "0.4", features = ["std"] }
sdk-common = { git = "https://github.com/breez/breez-sdk", rev = "4e1165bd0f78af6c716c52ab8ba401cfaac76f55" }
bip39 = "2.0.0"
