[package]
name = "breez-sdk-ark-cli"
version = "0.1.0"
edition = "2021"
description = "CLI client for Breez SDK with Ark"
license = "MIT"
repository = "https://github.com/breez/breez-sdk-ark"

[dependencies]
bip39 = { version = "2.1.0", features = ["rand"] }
bitcoin = { workspace = true }
lightning-invoice = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
breez-sdk-ark = { path = "../lib/core" }
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["derive"] }
dirs = "5.0.1"
rustyline = { version = "12.0.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.80"
shlex = "1.3.0"
serde_json = "1.0"
